--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
   .hero {
     text-align: center;
     padding: 100px 20px;
-    background-image: url('images/nana.avif');
+    background-image: url('images/NANA.avif');
     color: #fff;
     border-radius: 20px;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
@@ -185,7 +185,7 @@ body {
   }
 
   .services {
-    background-image: url('images/nana.avif');
+    background-image: url('images/NANA.avif');
     border-radius: 20px;
   }
 
@@ -256,7 +256,7 @@ body {
     border-radius: 20px;
     padding: 60px 20px;
     text-align: center;
-    background-image: url('images/nene.avif');
+    background-image: url('images/NENE.avif');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
